fix(slider): overflow: auto

--- a/src/pages/App/slider-components/History/index.module.scss
+++ b/src/pages/App/slider-components/History/index.module.scss
@@ -2,6 +2,8 @@
 
 .container {
   padding: 10px;
+  height: 100%;
+  overflow: scroll;
   .history {
     height: 30px;
     display: flex;
