--- a/src/pages/App/slider-components/Layout/index.module.scss
+++ b/src/pages/App/slider-components/Layout/index.module.scss
@@ -1,6 +1,8 @@
 .container {
   width: 100%;
   padding: 10px;
+  height: 100%;
+  overflow: auto;
   .layoutWarper {
     width: 100%;
     display: flex;
